# pytest

./: .gitignore  1555B.py  ENVIRONMENT_SETUP.md  README.md  pytest.code-workspace
codeforces/: 1005B.py  1013A.py  1017A.py  1031A.py  1038A.py  1043A.py  1047A.py  1047B.py  104A.py  1051B.py  1054A.py  1056A.py  1060A.py  1061A.py  1064A.py  1065A.py  1075A.py  1080A.py  1081A.py  1085A.py  1088A.py  1092A.py  1093A.py  1095B.py  1096A.py  1099A.py  1104A.py  1106A.py  1107B.py  1113A.py  1130A.py  1131A.py  1136A.py  1139A.py  1141B.py  1143A.py  1144A.py  1144B.py  1146A.py  1148A.py  (+279 more)
kaggle/: pyproject.toml
leetcode/: add_two_numbers.py  arranging-coins.py  assign-cookies.py  best_time_to_buy_and _sell_stock.py  best_time_to_buy_and_sell_stock_ii.py  bomb-enemy.py  can-make-arithmetic-progression-from-sequence.py  climbing-stairs.py  climbing_stairs.py  contains_duplicate.py  convert_sorted_array_to_binary_search_tree.py  count_and_say.py  count_primes.py  delete_node_in_a_linked_list.py  design-a-leaderboard.py  design-a-leaderboard_sortedlist.py  design-an-ordered-stream.py  design-compressed-string-iterator.py  design-hashmap.py  design-hashset.py  design-hit-counter.py  design-memory-allocator.py  design-parking-system.py  design-snake-game.py  design-underground-system.py  dot-product-of-two-sparse-vectors.py  excel-sheet-column-number.py  factorial_trailing_zeroes.py  fibonacci-number.py  find-all-numbers-disappeared-in-an-array.py  first_unique_character_in_a_string.py  fizz_buzz.py  hamming-distance.py  happy_number.py  house-robber.py  house_robber.py  implement_strstr.py  index-pairs-of-a-string.py  intersection_of_two_arrays_ii.py  (+55 more)
misc/: test.py  (+12 more)
(+110 files in other folders)
