[project]
name = "kaggle-competitions"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.1.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "xgboost>=1.6.0",
    "lightgbm>=3.3.0",
    "catboost>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=0.990",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]

[tool.uv]
dev-dependencies = [
    "kaggle>=1.5.0",
    "plotly>=5.0.0",
    "optuna>=3.0.0",
]

# Empty packages to avoid build issues
[tool.hatch.build.targets.wheel]
packages = []
