[project]
name = "leetcode-solutions"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=22.0.0",
    "mypy>=0.990",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]

# Empty packages to avoid build issues
[tool.hatch.build.targets.wheel]
packages = []
